Robust saving of generated password in NewPasswordFormManager.

This CL implements that independently of parsing result the generated
password is presaved and saved.

This CL contains:

1.Replacing field has_generated_password_ with generated_password_ in
NewPasswrodFormManager. This field is used to ensure that the generated
password is saved.

2.Setting this field in PresaveGenerated

3.In case if the new parser fails, use the result of the old parser
for presaving. It's for robustness.

4.Ensure that |generated_password_| is saved during presaving/saving.

Bug: 911636, 831123
Change-Id: Icc4e4c0bd597fc2f0da1f68a3333e7c93b8f8fb6
Reviewed-on: https://chromium-review.googlesource.com/c/1361021
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613975}
Former-commit-id: 8791081237e90719fc7a998a0e39296146cd4f9e